fix(sticky): sticky subheader no longer behind toolbar on Chrome
For browsers that do not support `position: sticky` the `.md-sticky-clone` will now appear below an `md-toolbar` if
one is adjacent to the `md-content` element that contains the sticky element (most likely an `md-subheader`).
Also updated documentation on `$mdSticky` to highligh dependency on `md-content`.

--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -19,6 +19,10 @@ md-toolbar {
     height: $toolbar-tall-height;
     min-height: $toolbar-tall-height;
     max-height: $toolbar-tall-height;
+
+    ~.md-sticky-clone {
+      top: $toolbar-tall-height;
+    }
   }
 
   &.md-medium-tall {
@@ -31,10 +35,18 @@ md-toolbar {
       min-height: 48px;
       max-height: 48px;
     }
+
+    ~.md-sticky-clone {
+      top: $toolbar-medium-tall-height;
+    }
   }
 
   .md-indent {
     margin-left: $toolbar-indent-margin;
+  }
+
+  ~.md-sticky-clone {
+    top: $toolbar-height;
   }
 }
 
